# tensorflow-auto-detect

./: .coveragerc  .gitattributes  .gitignore  MANIFEST.in  README.md  README.rst  VERSION  packaging_utils.py  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
requirements/: tests.pip
tfdetect/: __init__.py  _automagic.py  _version.py  cuda.py  pkg.py  test_pkg.py  utils.py
