[metadata]
name = tensorflow-detect
summary = Automatically install the correct tensorflow version by looking for any CUDA installations.
author = Trevor Joynson
author_email = github@skywww.net
license = GPL
keywords = 
    tensorflow
    whatthefuck
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[files]
packages =
    tfdetect

